Dark Mode For Pc Fix

--- a/gdsc-assignment-by-ahad/src/App.css
+++ b/gdsc-assignment-by-ahad/src/App.css
@@ -142,6 +142,12 @@ a {
 .navbar.dark-enabled {
   color: var(--themeBgColor);
 }
+.links.dark-enabled .link{
+  color: var(--themeBgColor);
+}
+.darkM.dark-enabled, .lightM.dark-enabled {
+  color: var(--themeBgColor);
+}
 
 /* MEDIA QUERIES */
 
